[package]
name = "rebar"
version = "0.1.0"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "process",
    "macros",
    "time",
    "io-util",
    "fs",
] }
